@@ -1,0 +1,9 @@
+<?php
+/**
+ * Монгол (Mongoloian)
+ *
+ * @addtogroup Language
+ *
+ */
+
+$linkTrail = '/^([a-zабвгдеёжзийклмнопрстуфхцчшщъыьэюя“»]+)(.*)$/sDu';
